fix: keep size of menu on mobile devices

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -72,6 +72,7 @@
   #menu {
     width: 100%;
     flex-direction: row;
+    flex: 0 0 3.5rem;
   }
 
   #menu nav {
